# Auto-Scholar

./: .gitignore  AGENTS.md  README.md  README_zh.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
app/: main.py  nodes.py  prompts.py  state.py  workflow.py
app/utils/: charts.py  event_queue.py  exporter.py  fulltext_api.py  llm_client.py  scholar_api.py
backend/: constants.py  main.py  nodes.py  prompts.py  schemas.py  state.py  workflow.py
backend/evaluation/: academic_style.py  runner.py  schemas.py  section_completeness.py
backend/utils/: charts.py  claim_verifier.py  exporter.py  fulltext_api.py  http_pool.py  llm_client.py  logging.py  scholar_api.py  source_tracker.py
docs/: architecture.md  user_guide.md
frontend/src/__tests__/: store.test.ts
frontend/src/app/: page.tsx
frontend/src/components/workspace/: citation-tooltip.tsx  method-comparison-table.tsx  structured-summary.tsx  workspace.tsx
frontend/src/components/workspace/processing-visualizer/: paper-card.tsx  processing-visualizer.tsx  stage-indicator.tsx
frontend/src/i18n/messages/: en.json  zh.json
frontend/src/types/: index.ts
tests/: conftest.py  test_charts.py  test_claim_verification.py  test_conversation.py  test_evaluation.py  test_evaluation_regression.py  test_event_queue.py  test_exporter.py  test_fulltext_api.py  test_integration.py  test_multi_source.py  test_phase1_features.py  test_phase2_integration.py
